프로젝트 구조 대폭 업데이트: Airbnb, Amazon, when2meet 추가, Pinterest/LinkedIn/Twitch 제거, 기존 서비스들 개선

--- a/TikTok/index.html
+++ b/TikTok/index.html
@@ -77,6 +77,25 @@
                         <video class="video-player" autoplay muted loop>
                             <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
                         </video>
+                        <div class="video-controls">
+                            <div class="video-progress">
+                                <div class="progress-bar">
+                                    <div class="progress-fill"></div>
+                                </div>
+                            </div>
+                            <div class="control-buttons">
+                                <button class="control-btn play-pause-btn">
+                                    <i class="fas fa-pause"></i>
+                                </button>
+                                <button class="control-btn volume-btn">
+                                    <i class="fas fa-volume-up"></i>
+                                </button>
+                                <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0">
+                                <button class="control-btn fullscreen-btn">
+                                    <i class="fas fa-expand"></i>
+                                </button>
+                            </div>
+                        </div>
                         <div class="video-overlay">
                             <div class="video-info">
                                 <div class="user-info">
@@ -101,7 +120,7 @@
                                     <span>Share</span>
                                 </button>
                                 <button class="action-btn bookmark-btn">
-                                    <i class="fas fa-bookmark"></i>
+                                    <i class="far fa-bookmark"></i>
                                 </button>
                             </div>
                         </div>
@@ -111,6 +130,25 @@
                         <video class="video-player" muted loop>
                             <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
                         </video>
+                        <div class="video-controls">
+                            <div class="video-progress">
+                                <div class="progress-bar">
+                                    <div class="progress-fill"></div>
+                                </div>
+                            </div>
+                            <div class="control-buttons">
+                                <button class="control-btn play-pause-btn">
+                                    <i class="fas fa-play"></i>
+                                </button>
+                                <button class="control-btn volume-btn">
+                                    <i class="fas fa-volume-up"></i>
+                                </button>
+                                <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0">
+                                <button class="control-btn fullscreen-btn">
+                                    <i class="fas fa-expand"></i>
+                                </button>
+                            </div>
+                        </div>
                         <div class="video-overlay">
                             <div class="video-info">
                                 <div class="user-info">
@@ -135,7 +173,7 @@
                                     <span>Share</span>
                                 </button>
                                 <button class="action-btn bookmark-btn">
-                                    <i class="fas fa-bookmark"></i>
+                                    <i class="far fa-bookmark"></i>
                                 </button>
                             </div>
                         </div>
@@ -145,6 +183,25 @@
                         <video class="video-player" muted loop>
                             <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
                         </video>
+                        <div class="video-controls">
+                            <div class="video-progress">
+                                <div class="progress-bar">
+                                    <div class="progress-fill"></div>
+                                </div>
+                            </div>
+                            <div class="control-buttons">
+                                <button class="control-btn play-pause-btn">
+                                    <i class="fas fa-play"></i>
+                                </button>
+                                <button class="control-btn volume-btn">
+                                    <i class="fas fa-volume-up"></i>
+                                </button>
+                                <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0">
+                                <button class="control-btn fullscreen-btn">
+                                    <i class="fas fa-expand"></i>
+                                </button>
+                            </div>
+                        </div>
                         <div class="video-overlay">
                             <div class="video-info">
                                 <div class="user-info">
@@ -169,7 +226,7 @@
                                     <span>Share</span>
                                 </button>
                                 <button class="action-btn bookmark-btn">
-                                    <i class="fas fa-bookmark"></i>
+                                    <i class="far fa-bookmark"></i>
                                 </button>
                             </div>
                         </div>
