--- a/discord/index.html
+++ b/discord/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <div class="app-container">
+        <!-- Mobile Menu Toggle -->
+        <button class="mobile-menu-toggle" id="mobile-menu-toggle">
+            <i class="fas fa-bars"></i>
+        </button>
+
+        <!-- Sidebar Overlay -->
+        <div class="sidebar-overlay" id="sidebar-overlay"></div>
+
         <!-- Server Sidebar -->
         <div class="server-sidebar">
             <div class="server-list">
@@ -113,6 +121,9 @@
                 <div class="messages-list" id="messages-list">
                     <!-- Messages will be populated by JavaScript -->
                 </div>
+                <div class="typing-indicator" id="typing-indicator">
+                    <span class="typing-dots"></span> jun is typing...
+                </div>
             </div>
 
             <!-- Message Input -->
@@ -121,12 +132,13 @@
                     <div class="input-wrapper">
                         <input type="text" id="message-input" placeholder="Message #general">
                         <div class="input-actions">
-                            <i class="fas fa-plus"></i>
-                            <i class="fas fa-gift"></i>
-                            <i class="fas fa-grin"></i>
+                            <i class="fas fa-plus" id="file-upload-btn" title="Upload File"></i>
+                            <i class="fas fa-gift" title="Send Gift"></i>
+                            <i class="fas fa-grin" title="Emoji"></i>
                         </div>
                     </div>
                 </div>
+                <input type="file" id="file-input" accept="image/*,video/*,audio/*,.txt,.pdf,.doc,.docx" style="display: none;" multiple>
             </div>
         </div>
 
