--- a/facebook/home.html
+++ b/facebook/home.html
@@ -42,8 +42,8 @@
         
         <div class="nav-right">
             <div class="nav-icon" id="profileMenu">
-                <img src="https://via.placeholder.com/40" alt="Profile" class="profile-pic">
-                <span>John Doe</span>
+                <img src="https://via.placeholder.com/40/1877f2/ffffff?text=U" alt="Profile" class="profile-pic" id="navProfilePic">
+                <span id="navUserName">John Doe</span>
             </div>
             <div class="nav-icon" id="messagesBtn">
                 <i class="fab fa-facebook-messenger"></i>
@@ -62,8 +62,8 @@
     <div class="main-container">
         <aside class="left-sidebar">
             <div class="sidebar-item" data-page="profile">
-                <img src="https://via.placeholder.com/36" alt="Profile">
-                <span>John Doe</span>
+                <img src="https://via.placeholder.com/36/1877f2/ffffff?text=U" alt="Profile" id="sidebarProfilePic">
+                <span id="sidebarUserName">John Doe</span>
             </div>
             <div class="sidebar-item" data-page="friends">
                 <i class="fas fa-user-friends"></i>
@@ -105,7 +105,7 @@
 
         <main class="main-content" id="mainContent">
             <div class="stories-section">
-                <div class="story create-story">
+                <div class="story create-story" onclick="openStoryModal()">
                     <i class="fas fa-plus"></i>
                     <span>Create Story</span>
                 </div>
@@ -366,6 +366,13 @@
         </div>
     </div>
 
+    <script>
+        // Check if user is logged in
+        const userData = localStorage.getItem('fbDemoUser');
+        if (!userData) {
+            window.location.href = 'index.html';
+        }
+    </script>
     <script src="home-script.js"></script>
     <script src="enhanced-script.js"></script>
     <script src="additional-features.js"></script>
