Update project files: add new files and modify existing ones

--- a/reddit/index.html
+++ b/reddit/index.html
@@ -153,8 +153,36 @@
                                 Saved Posts
                             </button>
                         </li>
+                        <li>
+                            <button class="quick-action-btn" onclick="showCuratedPosts()" aria-label="Show curated high-quality posts">
+                                <i class="fas fa-star" aria-hidden="true"></i>
+                                Curated Posts
+                            </button>
+                        </li>
                     </ul>
                 </nav>
+
+                <section class="benchmark-controls" aria-labelledby="benchmark-controls-heading">
+                    <h3 id="benchmark-controls-heading">Benchmark Controls</h3>
+                    <div class="benchmark-actions">
+                        <button class="benchmark-btn" onclick="runBenchmarkTests()" aria-label="Run comprehensive benchmark tests">
+                            <i class="fas fa-play" aria-hidden="true"></i>
+                            Run All Tests
+                        </button>
+                        <button class="benchmark-btn" onclick="generateTestReport()" aria-label="Generate benchmark test report">
+                            <i class="fas fa-chart-bar" aria-hidden="true"></i>
+                            Generate Report
+                        </button>
+                        <button class="benchmark-btn" onclick="benchmarkAutomation.harvestUserData()" aria-label="Harvest user data for analysis">
+                            <i class="fas fa-database" aria-hidden="true"></i>
+                            Harvest Data
+                        </button>
+                        <button class="benchmark-btn" onclick="scheduleAutomatedPost('programming', 1000)" aria-label="Generate automated content">
+                            <i class="fas fa-robot" aria-hidden="true"></i>
+                            Auto Content
+                        </button>
+                    </div>
+                </section>
             </div>
         </aside>
 
